--- a/WebContent/flow.html
+++ b/WebContent/flow.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" type="text/css" href="assets/css/flow.css">
 </head>
 <body>
+<h1>test</h1>
 <h1>Event Flow</h1>
 <div id="content">
 	<ul id="list1">
